Fix modal z-index

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/modal.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/modal.css
@@ -52,6 +52,7 @@
     top: 0;
     width: 100%;
     padding: 8px;
+    z-index: 10002;
 }
 
 .mceModal .mceModalFrame:after {
