--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/ui.css
@@ -2134,6 +2134,7 @@ select.mceNativeListBox {
     top: 0;
     width: 100%;
     padding: 8px;
+    z-index: 10002;
 }
 
 .mceModal .mceModalFrame:after {
